--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
 }
 
 .container h2{
-    font-size: 1.6rem;
+    font-size: .6rem;
     font-weight: 500;
     text-align: center;
 }
@@ -144,4 +144,68 @@ body{
 
 .container form button:hover{
     background: #675afe;
+}
+
+
+
+@media only screen and (min-width: 600px){
+    .container {
+        width: 35rem; 
+    padding: 40px 50px;
+       
+    }
+    .container h2{
+        font-size: 2.6rem;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    .container form p{
+        font-size: 2.5rem;
+        margin-bottom: 20px;
+    }
+    .container form input{
+        height: 60px;
+        
+        font-size: 2rem;
+        
+    }
+
+    .container .convert-box .select-input{
+        display: flex;
+       
+        height: 60px;
+       
+    }
+
+    .container .convert-box .select-input img{
+        max-width: 40px;
+    }
+
+    .container .convert-box .select-input select{
+        
+        font-size: 2rem;
+    
+    }
+
+    .container .convert-box .reverse{
+      
+        font-size: 32px;
+        
+    }
+
+    
+.container form .result{
+    font-size: 2.1rem;
+}
+
+.container form button{
+    width: 50%;
+    height: 62px;
+  
+    font-size: 1.7rem;
+    border-radius: 10px;
+}
+    
+
 }
